@@ -35,6 +35,15 @@ options {
 	dnssec-validation yes;
 };
 
+key rndc_key {
+	secret "1234abcd8765";
+	algorithm hmac-sha256;
+};
+
+controls {
+	inet 10.53.0.3 port 9953 allow { any; } keys { rndc_key; };
+};
+
 zone "." {
 	type hint;
 	file "../../common/root.hint";
@@ -197,5 +206,7 @@ zone "LOWER.EXAMPLE" {
 	type master;
 	file "lower.example.db.signed";
 };
+
+include "siginterval.conf";
 
 include "trusted.conf";
