@@ -1,0 +1,6 @@
+zone "siginterval.example" {
+        type master;
+        allow-update { any; };
+	sig-validity-interval 1 23;
+        file "siginterval.example.db";
+};
