@@ -4,6 +4,9 @@
 3646.	[bug]		Journal filename string could be set incorrectly,
 			causing garbage in log messages. [RT #34738]
 
+3641.	[bug]		Handle changes to sig-validity-interval settings
+			better. [RT #34625]
+			
 3640.	[bug]		ndots was not being checked when searching.  Only
 			continue searching on NXDOMAIN responses.  Add the
 			ability to specify ndots to nslookup. [RT #34711]
